[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/player.gd" type="Script" id=1]
[ext_resource path="res://entities/godude.png" type="Texture" id=2]
[ext_resource path="res://entities/godead.png" type="Texture" id=3]
[ext_resource path="res://Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/shotgun_pump.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="SpriteGodude" type="Sprite" parent="."]
position = Vector2( 30.2601, 0 )
texture = ExtResource( 2 )

[node name="SpriteDead" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2.15684, 2.31159 )
shape = SubResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 4 )]
MuzzlePath = NodePath("../Muzzle")
shoot_delay = 0.5
reload_delay = 0.2

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 60.1301, 17.2915 )

[node name="SoundRack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
